# jenkins-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  job.rs  lib.rs  main.rs  params.rs  profile.rs  run.rs  tail.rs
tests/: cli_test.rs
tests/cmd/: README-6.stdout  test_help.stdout  test_help.toml  test_tail.stdout  test_tail.toml
