[package]
name = "jenkins-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
config = "0.13.3"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
