[package]
name = "jenkins-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
assert_cmd = { version = "2.0.8", features = ["color-auto"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
config = "0.13.3"
directories = "4.0.1"
futures = "0.3.26"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
urlencoding = "2.1.2"

[[bin]]
name = "jenkins"
path = "src/main.rs"

[dev-dependencies]
trycmd = "0.14.12"
tempdir = "0.3.7"
wiremock = "0.5.17"
